--- a/reactjs/react-redux-webpack-babel/package.json
+++ b/reactjs/react-redux-webpack-babel/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server --hot"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,13 +15,21 @@
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "html-webpack-plugin": "^2.28.0",
+    "react-hot-loader": "^1.3.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
   },
   "dependencies": {
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4"
+  },
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server"
   }
 }
