--- a/reactjs/react-redux-webpack-babel-fail/package.json
+++ b/reactjs/react-redux-webpack-babel-fail/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.7.1",
@@ -26,7 +27,8 @@
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "^3.0.0-beta.6"
   },
   "scripts": {
     "build": "webpack",
