--- a/reactjs/material-ui/package.json
+++ b/reactjs/material-ui/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "marked": "^0.3.6",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.6"
