--- a/reactjs/redux/redux-blog/package.json
+++ b/reactjs/redux/redux-blog/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.0",
-	  "react-hot-loader": "^3.0.0-beta.6",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
